# lab2_mini_CLI

./: .gitignore  .history  README.md  pyproject.toml
kall/: zhopa
kall/ochko/: loh
src/: main.py  shell.py
src/commands/: arch_cmd.py  arch_commands.py  cat_cmd.py  cd_cmd.py  cp_cmd.py  grep_cmd.py  history_cmd.py  ls_cmd.py  mv_cmd.py  pwd_cmd.py  rm_cmd.py
src/constants/: config.py  denied_files.py  file_mode.py
tests/: conftest.py  test_for_arch.py  test_for_cat.py  test_for_cd_pwd.py  test_for_cp.py  test_for_grep.py  test_for_ls.py  test_for_mv.py  test_for_rm.py
